Added login and sign-up UI | added bootstrap-5 CDN

--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minimal Bootstrap Boilerplate</title>
+    <!-- Add Bootstrap CSS CDN link here -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <style>
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
-<body>
-    
+
+<body class="d-flex flex-column">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">WEB-DEV</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
+
+    <div class="container d-flex justify-content-center mt-4">
+
+        <div class="d-flex flex-column w-50 card p-5">
+
+            <div class="d-flex">
+                <div class="w-50  text-center">
+                    <button class="btn btn-primary w-75">Login</button>
+                </div>
+
+
+                <div class="w-50  text-center">
+                    <button class="btn btn-secondary w-75">Sing-Up</button>
+                </div>
+
+            </div>
+
+            <div class=" mt-5 p-5 bg-light">
+                <p class="font-monospace fw-bold text-secondary">Login Form</p>
+            </div>
+
+
+            <div class=" mt-5 p-5 bg-light" hidden>
+                <p class="font-monospace fw-bold text-secondary">Sing-Up Form</p>
+            </div>
+           
+        </div>
+
+
+
+
+
+    </div>
+
+    <div class="container-fluid bg-light">
+        <footer class="container">
+            <div class="w-100 d-flex justify-content-center border border-black">
+                <h6 class="text-secondary">&copy; 2023 Your Company. All Rights Reserved.</h6>
+            </div>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
