--- a/index.html
+++ b/index.html
@@ -34,24 +34,27 @@
         <div class="d-flex flex-column w-50 card p-5">
 
             <div class="d-flex">
-                <div class="w-50  text-center">
-                    <button class="btn btn-primary w-75">Login</button>
+                <div class="w-50  d-flex justify-content-center mx-1" >
+                    <div class="bg-primary w-100 p-2 text-center rounded" onclick="switchTab('login')">
+                        
+                        <span class="text-light">Login</span></div>
                 </div>
 
 
-                <div class="w-50  text-center">
-                    <button class="btn btn-secondary w-75">Sing-Up</button>
+                <div class="w-50  d-flex justify-content-center mx-1">
+                    <div class="bg-secondary w-100 p-2 text-center rounded" onclick="switchTab('SignUp')">
+                    <span class="text-light">Sign-Up</span></div>
                 </div>
 
             </div>
 
-            <div class=" mt-5 p-5 bg-light">
+            <div id="login_form_div" class=" mt-3 p-3 bg-light rounded">
                 <p class="font-monospace fw-bold text-secondary">Login Form</p>
             </div>
 
 
-            <div class=" mt-5 p-5 bg-light" hidden>
-                <p class="font-monospace fw-bold text-secondary">Sing-Up Form</p>
+            <div id="signup_form_div" class=" mt-3 p-3 bg-light rounded" hidden>
+                <p class="font-monospace fw-bold text-secondary">Sign-Up Form</p>
             </div>
            
         </div>
@@ -72,6 +75,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script src="./scripts/loginSignUp.js"></script>
 </body>
 
 </html>
